Create crud api for allowance
