# model/request/allowance_request.go
@@ -1,0 +1,5 @@
+package request
+
+type AllowanceRequest struct {
+	Name string `validate:"required" json:"name"`
+}
